--- a/exserver.html
+++ b/exserver.html
@@ -1,35 +1,28 @@
+<iframe id="iframe"></iframe>
+<img id="img">
 <script>
     async function req(url) {
         return await new Promise((resolve, reject) => {
-            var img = document.createElement("img");
-            img.src = url;
-            document.body.appendChild(img);
+            const iframe = document.getElementById("iframe");
+            iframe.src = url;
+            iframe.onload = () => { 
+                const iframeDocument = iframe.contentDocument || iframe.contentWindow.document;
+                const iframeContent = iframeDocument.body.innerText;
 
-            img.addEventListener('error', function() {
-                var xhr = new XMLHttpRequest();
-                xhr.onreadystatechange = function() {
-                    if (xhr.readyState === 4) {
-                        if (xhr.status === 404) {
-                            console.log('Image not found (404 Not Found)');
-                            // 여기에서 404 오류를 처리하거나 필요한 작업을 수행할 수 있습니다.
-                            return reject();
-                        } else {
-                            console.log('Other error:', xhr.status);
-                            // 다른 종류의 오류를 처리할 수도 있습니다.
-                            return resolve();
-                        }
-                    }
-                };
-
-                xhr.open('GET', img.src, true);
-                xhr.send();
-            }); 
+                if (iframeContent.includes("404")) {
+                    // "404"가 포함되어 있으면 reject()
+                    return reject();
+                } else {
+                    // "404"가 포함되어 있지 않으면 resolve()
+                    return resolve();
+                }
+            }; 
         });
     }
     async function search(query) {
         try {
             await req(
-              `http://localhost:8000/search?keyword=${query}`
+              `http://host3.dreamhack.games:17589/search?keyword=${query}`
             );
             return true;
         } catch (e) {
