--- a/exserver.html
+++ b/exserver.html
@@ -3,8 +3,10 @@
 <script>
     async function req(url) {
         return await new Promise((resolve, reject) => {
-            var img = document.getElementById('img');
+            var img = document.createElement("img");
             img.src = url;
+            document.body.appendChild(img);
+            
             img.addEventListener('error', function() {
                 var xhr = new XMLHttpRequest();
                 xhr.onreadystatechange = function() {
